--- a/desafios/des012/estilo/style.css
+++ b/desafios/des012/estilo/style.css
@@ -1,4 +1,12 @@
 @charset "UTF-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap'); 
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2:'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
 * {
     margin: 0px;
     padding: 0px;
@@ -7,6 +15,7 @@
 html, body{
     background-color: darkgray;
     min-height: 100%;
+    font-family: var(--fonte1);
 }
 header{
     background-color: black;
@@ -16,6 +25,8 @@ header{
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vw;
 }
 header > p{
     padding-bottom: 50px;
@@ -34,6 +45,12 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3) ;
+    font-size: 3.5vw;
+}
+
+section > p {
+    padding-bottom: 2em;
 }
 
 section.normal{
@@ -42,13 +59,29 @@ section.normal{
 }
 
 section.imagem{
-    background-color: rgba(0, 0, 0, 0.76);
-    color: white;    
+    background-color: rgba(0, 0, 0, 0.747);
+    color: white;  
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.452);
+    background-size: cover;  
+    background-attachment: fixed ;
 }
 
 section.imagem > p{
-    background-color: rgba(0, 0, 0, 0.281);
-    width: 400px;
+    background-color: rgba(0, 0, 0, 0.493);
+    display: inline-block;
+    padding: 5px;
+    text-shadow: 1px 1px 0px black;
+}
+
+
+ section#img01 {
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+    
+ }
+
+ section#img02 {
+    background-image: url(../imagens/background002.jpg);  
 }
 
 footer{
